--- a/google_chart_module/demo/index.html
+++ b/google_chart_module/demo/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title></title>
-    <script src="jquery.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script type="text/javascript" src="https://www.google.com/jsapi"></script>
 </head>
 <body>
