--- a/google_chart_module/demo/index.html
+++ b/google_chart_module/demo/index.html
@@ -27,7 +27,7 @@
                 ],
                 'options': {
                     width: 500,
-                    height: 100,
+                    height: 200,
                     animation:{
                         duration: 500,
                         easing: 'linear',
@@ -92,10 +92,10 @@
 
             var defaultOptions = {
                 width: 500,
-                height: 300,
+                height: 500,
                 animation:{
                     duration: 500,
-                    easing: 'linear',
+                    easing: 'linear'
                 },
                 hAxis: {
                     title: 'Time'
@@ -186,12 +186,30 @@
                 }
             }
 
+            function extend(out) {
+                out = out || {};
+
+                for (var i = 1; i < arguments.length; i++) {
+                    if (!arguments[i])
+                        continue;
+
+                    for (var key in arguments[i]) {
+                        if (arguments[i].hasOwnProperty(key))
+                            out[key] = arguments[i][key];
+                        }
+                }
+
+                return out;
+            };
+
             return {
 
             	addChart: function( chart ) {
                     if ( !chart.options ) {
                         chart.options = defaultOptions;
-                    }                    
+                    } else {
+                        chart.options = extend({}, defaultOptions, chart.options);
+                    }                   
                     charts.push(chart);
                 },
 
