Refactoring public API

--- a/google_chart_module/demo/index.html
+++ b/google_chart_module/demo/index.html
@@ -4,6 +4,7 @@
     <title></title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script type="text/javascript" src="https://www.google.com/jsapi"></script>
+    <script src="google_chart_module.js"></script>
 </head>
 <body>
     <div id="chart1"></div>
@@ -64,7 +65,7 @@
                         value: 'Cats'
                     }
                 ],
-                
+
                 'data': [
 	                [0, 0],   [1, 10],  [2, 23],
 	                [3, 17],  [4, 18],  [5, 9]
@@ -73,7 +74,7 @@
 
             google_chart_module.init();
 
-            setTimeout(function() { 
+            setTimeout(function() {
                 google_chart_module.updateChart('chart1', [
 	                [0, 0],   [1, 10],  [2, 23],
 	                [3, 45], [4, 86], [5, 1],
@@ -83,177 +84,6 @@
             }, 3000);
 
         });
-
-        var google_chart_module = (function() {
-
-            google.load('visualization', '1', { packages: ['corechart'] });
-
-            var charts = [];
-
-            var defaultOptions = {
-                width: 500,
-                height: 500,
-                animation:{
-                    duration: 500,
-                    easing: 'linear'
-                },
-                hAxis: {
-                    title: 'Time'
-                },
-                vAxis: {
-                    title: 'Popularity'
-                }
-            };
-
-            /**
-            * Very basic check for passed configuration options
-            */
-            function simpleChartsConfigCheck() {
-                for (var chart in charts) {
-                    assert(charts[chart].element);
-                    assert(charts[chart].columns);
-                    assert(charts[chart].options);
-                    assert(charts[chart].data);
-                }
-            }
-
-            function assert(condition, message) {
-                if (!condition) {
-                    message = message || "Assertion failed";
-                    if (typeof Error !== "undefined") {
-                        throw new Error(message);
-                    }
-                    throw message; // Fallback
-                }
-            }
-
-            /**
-            * Creates an array containing the needed data tables and set it´s columns
-            */
-            function createDataTables() {
-                for (var chart in charts) {
-                    var data = new google.visualization.DataTable();
-
-                    charts[chart].dataTable = data;
-                }
-            }
-
-            /**
-            * Set the data tables columns and fill them with the given data.
-            */
-            function setDataTablesColumns(dataTables) {
-                for (var chart in charts) {
-                    for (var columns in charts[chart].columns) {
-                        var type = charts[chart].columns[columns].type;
-                        var value = charts[chart].columns[columns].value;
-
-                        charts[chart].dataTable.addColumn( type, value );
-                    }
-                }
-            }
-
-            /**
-            * Set the data tables rows and fill them with the given data.
-            */
-            function setDataTablesRows(dataTables) {
-                for (var chart in charts) {
-                	var data = charts[chart].data;
-
-                	charts[chart].dataTable.addRows(data);
-                }
-            }
-
-            /**
-            * Sets the charts instances.
-            */
-            function initCharts(dataTables) {
-                for (var chart in charts) {
-                	var element = document.getElementById(charts[chart].element);
-
-                	charts[chart].instance = new google.visualization.LineChart(element);
-                }
-            }
-
-            /**
-            * Executes the draw function from all the charts.
-            */
-            function drawCharts() {
-                for (var chart in charts) {
-                	var options = charts[chart].options;
-                	var dataTable = charts[chart].dataTable;
-
-                	charts[chart].instance.draw(dataTable, options);
-                }
-            }
-
-            function extend(out) {
-                out = out || {};
-
-                for (var i = 1; i < arguments.length; i++) {
-                    if (!arguments[i])
-                        continue;
-
-                    for (var key in arguments[i]) {
-                        if (arguments[i].hasOwnProperty(key))
-                            out[key] = arguments[i][key];
-                        }
-                }
-
-                return out;
-            };
-
-            return {
-
-            	addChart: function( chart ) {
-                    if ( !chart.options ) {
-                        chart.options = defaultOptions;
-                    } else {
-                        chart.options = extend({}, defaultOptions, chart.options);
-                    }                   
-                    charts.push(chart);
-                },
-
-                init: function() {
-                    simpleChartsConfigCheck();
-
-                    createDataTables();
-                    setDataTablesColumns();
-                    setDataTablesRows();
-
-                    initCharts();
-
-                    drawCharts();
-                },
-
-                updateChart: function(element, data, updateOptions) {
-                    var index;
-
-                    for (var chart in charts) {
-                        if (charts[chart].element === element) {
-                            index = chart;
-                        }
-                    }
-
-                    if (!index) {
-                        console.error('No element found');
-                        return;
-                    }
-
-                    if (updateOptions){
-                        charts[index].options = updateOptions;
-                    }
-
-                    var rowsIndex = charts[index].dataTable.getNumberOfRows();
-
-                    charts[index].dataTable.removeRows(0, rowsIndex);
-                    charts[index].dataTable.insertRows(0, data);
-
-                    drawCharts();
-                }
-                
-            };
-
-        })();
 
     </script>
 
